--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href=" {{ url_for( 'static' , filename = 'css/style.css' ) }} ">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     {% include "includes/header.html" %}
