Number system - icons

--- a/application/templates/includes/header.html
+++ b/application/templates/includes/header.html
@@ -1,3 +1,4 @@
 <header class="header">
+    <img src="{{ url_for('static',filename='/icons/numberio.png') }}" style="height:29px;">
     <h1 class="heading">Number.io</h1>
 </header>
